force-app/main/default/objects/Charge_Information__c/fields/Statute_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Statute_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NY Statute #</label>
    <referenceTo>NY_Offense__c</referenceTo>
    <relationshipLabel>Charge Information</relationshipLabel>
    <relationshipName>Charge_Information</relationshipName>
    <type>Lookup</type>
</CustomField>