force-app/main/default/objects/Charge_Information__c/fields/Statute_Type__c.field-meta.xml
<CustomField>
    <fullName>Statute_Type__c</fullName>
    <formula>Statute_Lookup__r.Statute_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statute Type</label>
    <type>Text</type>
</CustomField>