force-app/main/default/objects/Charge_Information__c/fields/Time_to_Arrest__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Arrest__c</fullName>
    <formula>Arrest_Charge_s_Filed_Date__c - Case__r.Date_of_Incident__c</formula>
    <label>Time to Arrest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>