force-app/main/default/objects/Charge_Information__c/fields/Today_or_Future__c.field-meta.xml
<CustomField>
    <fullName>Today_or_Future__c</fullName>
    <formula>IF( Next_Court_Date__c &gt;= TODAY(), True, False)</formula>
    <label>Today or Future</label>
    <type>Checkbox</type>
</CustomField>