force-app/main/default/objects/Charge_Information__c/fields/Top_Charge__c.field-meta.xml
<CustomField>
    <fullName>Top_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Charge?</label>
    <type>Checkbox</type>
</CustomField>