force-app/main/default/objects/Charge_Information__c/recordTypes/National_Charge.recordType-meta.xml
<RecordType>
    <fullName>National_Charge</fullName>
    <active>true</active>
    <label>National Charge</label>
</RecordType>