force-app/main/default/objects/Charge_Information__c/recordTypes/NY_Charge.recordType-meta.xml
<RecordType>
    <fullName>NY_Charge</fullName>
    <active>true</active>
    <label>NY Charge</label>
</RecordType>