force-app/main/default/objects/Charge_Information__c/listViews/Nina_s_List_NYC_Charges.listView-meta.xml
<ListView>
    <fullName>Nina_s_List_NYC_Charges</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>Case__c</columns>
    <columns>NYPD_Complaint_Number__c</columns>
    <columns>ACIS_Case_Number__c</columns>
    <columns>Case_Summary__c</columns>
    <columns>Animal_Name_s__c</columns>
    <columns>NAME</columns>
    <columns>Arrest_Charge_s_Filed_Date__c</columns>
    <columns>Defendant__c</columns>
    <columns>Arrest__c</columns>
    <columns>Docket__c</columns>
    <columns>Indictment__c</columns>
    <columns>Statute_Lookup__c</columns>
    <columns>Next_Court_Date__c</columns>
    <columns>Part__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Charge_Information__c.NY_Charge</value>
    </filters>
    <filters>
        <field>Next_Court_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Next_Court_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Nina&apos;s List - NYC Charges</label>
</ListView>